@@ -1,4 +1,4 @@
 # The initial syslog(3) priority: "err", "info", "debug" or its
 # numerical equivalent. For runtime debugging, the daemons internal
-# state can be changed with: "udevadm control --log_priority=<value>".
+# state can be changed with: "udevadm control --log-priority=<value>".
 udev_log="err"
